Adding unit_1 folder

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title> World Events </title>
+	</head>
+	
 	<body>
-		<h1>BAll that interests you arround the world </h>
-			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world</p>
+		<h1>All that interests you arround the world </h1>
+		<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
 	</body>
 </html>
