changes to unit 2

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title> World Events </title>
 	</head>
 	
-	<body>
-		<h1>All that interests you arround the world </h1>
-		<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
+	<body>	
+		<img src="photos/background.jpg">
+		<header>
+
+			<div class="logo">
+			<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title"></div>
+		</header>
+		</div>
+			<h1>All that interests you arround the world </h1>
+			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
+
+			<h2><ul><li><a href="http://www.winter.com">Winter</a></li></ul></h2>
+				<div class="december">
+					<img src="photos/december.jpg" alt="New Year" title="New Year Preparation"></div>
+				<div class="january">
+					<img src="photos/january.jpg" alt="Chinese New Year" title="Chinese New Year"></div>
+				<div class="february">
+					<img src="photos/february.jpg" alt="" title="New Year Preparation"></div>
+
+		
+			<h2><ul><li><a href="http://www.spring.com">Spring</a></li></ul></h2>			
+				<div class="march">
+					<img src="photos/march2.jpg" alt="Brazil Festival" title="Biggest Festifal in the world in Brasil"></div>
+				<div class="april">
+					<img src="photos/april2.jpg" alt="Easter" title="Easter bunny with eggs"></div>
+				<div class="may">
+					<img src="photos/may.jpg" alt="Victory day" title="Victory day on the 9th of May"></div>				
+
+			<h2><ul><li><a href="http://www.summer.com">Summer</a></li></ul></h2>
+				<div class="june">
+					<img src="photos/june2.jpg" alt="Chinese Dragon Boat Festival" title="Dragon boats all over the river"></div>
+				<div class="july">
+					<img src="photos/july.jpg" alt="Independence Day" title="4th of July"></div>
+				<div class="august">
+					<img src="photos/august.jpg" alt="Notting Hill Carnival" title="The Brinitch biggest Carnival"></div>	
+
+			<h2><ul><li><a href="http://www.fall.com">Fall</a></li></ul></h2>
+				<div class="september">
+					<img src="photos/september.jpg" alt="Sukkot" title="Traditional one week Jewish festival"></div>
+				<div class="october">
+					<img src="photos/october.jpg" alt="Octoberfest" title="Celebrating Octoberfest"></div>
+				<div class="november">
+					<img src="photos/november.jpg" alt="Thanksgiving" title="Thanksgiving table with turkey"></div>
+
+		<hr>
+		<ul>
+			<li><a href="https://www.facebook.com/alexandra.sokolova.52">About Me</a></li>
+			<li><a href="http://www.links.com">Other useful links</a></li>
+		</ul>
+
 	</body>
 </html>
