--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -9,7 +9,7 @@
 		<img src="photos/background.jpg">
 		<header>
 
-			<div class="logo">
+			<div id="logo">
 			<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title"></div>
 		</header>
 		</div>
@@ -17,36 +17,36 @@
 			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
 
 			<h2><ul><li><a href="http://www.winter.com">Winter</a></li></ul></h2>
-				<div class="december">
+				<div id="december">
 					<img src="photos/december.jpg" alt="New Year" title="New Year Preparation"></div>
-				<div class="january">
+				<div id="january">
 					<img src="photos/january.jpg" alt="Chinese New Year" title="Chinese New Year"></div>
-				<div class="february">
+				<div id="february">
 					<img src="photos/february.jpg" alt="" title="New Year Preparation"></div>
 
 		
 			<h2><ul><li><a href="http://www.spring.com">Spring</a></li></ul></h2>			
-				<div class="march">
+				<div id="march">
 					<img src="photos/march2.jpg" alt="Brazil Festival" title="Biggest Festifal in the world in Brasil"></div>
-				<div class="april">
+				<div id="april">
 					<img src="photos/april2.jpg" alt="Easter" title="Easter bunny with eggs"></div>
-				<div class="may">
+				<div id="may">
 					<img src="photos/may.jpg" alt="Victory day" title="Victory day on the 9th of May"></div>				
 
 			<h2><ul><li><a href="http://www.summer.com">Summer</a></li></ul></h2>
-				<div class="june">
+				<div id="june">
 					<img src="photos/june2.jpg" alt="Chinese Dragon Boat Festival" title="Dragon boats all over the river"></div>
-				<div class="july">
+				<div id="july">
 					<img src="photos/july.jpg" alt="Independence Day" title="4th of July"></div>
-				<div class="august">
+				<div id="august">
 					<img src="photos/august.jpg" alt="Notting Hill Carnival" title="The Brinitch biggest Carnival"></div>	
 
 			<h2><ul><li><a href="http://www.fall.com">Fall</a></li></ul></h2>
-				<div class="september">
+				<div id="september">
 					<img src="photos/september.jpg" alt="Sukkot" title="Traditional one week Jewish festival"></div>
-				<div class="october">
+				<div id="october">
 					<img src="photos/october.jpg" alt="Octoberfest" title="Celebrating Octoberfest"></div>
-				<div class="november">
+				<div id="november">
 					<img src="photos/november.jpg" alt="Thanksgiving" title="Thanksgiving table with turkey"></div>
 
 		<hr>
