--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<head>
 	<title>Photosharing</title>
-</head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<style>
+		body {
+			background: url(http://i.huffpost.com/gen/1376255/images/o-NIAGRA-FALLS-facebook.jpg);
+			background-color: lightyellow;
+		}
+	</style>
+	</head>
 
-<body>
-	<body style="background-color:lightyellow">
-
+	<body>
 	<h1>Photosharing</h1>
 		<div id="photo"><img src="photos/background.jpg" alt="Share your photos" title="Upload and download your photos here"></div>	
 	
 	<div id="slogan">Share memories</div>
-	<p>Takes a long time to share vacation photos with all your friens? Even worse collecting all pohos from the? Use photosharing! Everyone can upload and download photoes they like! <br>
+	<p>Takes a long time to share vacation photos with all your friens? Even worse collecting all photos from the? Use photosharing! Everyone can upload and download photoes they like! <br>
 	The process is simple! Sign in, add your friends, create folders with photos. Give access to different people. Now your friend can download the potos and also upload theirs! You are all set to go! Give it a try!</p>
 	
 	<ul>
@@ -20,10 +24,13 @@
 		<li>Grant selective access to friends and family </li>
 		<li>Pay as much as $9.99/month to extend the data</li>
 	</ul>
-
 	<hr>
 	<ul>
 		<a href="http://www.photosharing.com">Contact us</a>
+		<br>
+		<br>
+		<input type="e-mail" placeholder="Sing In">
+		<input type="submit">
 	</ul>
 
 </body>
