final changes to unit_3

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -16,7 +16,7 @@
 			<h1>All that interests you arround the world </h1>
 			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
 
-			<h2><ul><li><a href="http://www.winter.com">Winter</a></li></ul></h2>
+			<h2><a href="http://www.winter.com">Winter</a></h2>
 				<div id="december">
 					<img src="photos/december.jpg" alt="New Year" title="New Year Preparation"></div>
 				<div id="january">
