--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,12 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="photo">
+	<section id="name">
 		<h1>Photosharing</h1>
-	</div>
-	<section id="about">
-		<h2 id="slogan">Share memories</h2>
-		<p>Takes a long time to share vacation photos with all your friens? Even worse collecting all photos from the? Use photosharing! Everyone can upload and download photoes they like! <br>
+	</sesction> 
+
+	<section id="slogan">
+		<h3>Share memories</h3>
+		<img src="photos/camera.jpg">
+		<p>Takes a long time to share vacation photos with all your friens? Even worse collecting all photos from the? Use photosharing! Everyone can upload and download photoes they like! <br><br>
 		The process is simple! Sign in, add your friends, create folders with photos. Give access to different people. Now your friend can download the potos and also upload theirs! You are all set to go! Give it a try!</p>
 		<ul>
 			<li>Store up to 5 GB of data</li>
@@ -18,9 +20,12 @@
 			<li>Pay as much as $9.99/month to extend the data</li>
 		</ul>
 	</section>
-	<hr>
+
 	<section id="contact">
-		<a href="http://www.photosharing.com">Contact us</a>
+	<hr>
+	<br>
+	<br>
+	<a href="http://www.photosharing.com">Contact us</a>
 		<form>
 			<input type="e-mail" placeholder="Sing In">
 			<input type="submit">
