--- a/unit_1/winter.html
+++ b/unit_1/winter.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>
+	<head>		
+			<link rel="stylesheet" type="text/css" href="css1/style1.css">
+		<title>Winter</title>
+	</head>
+	
+	<body>
+	<h1>Winter</h1>	
+	<img src="photos/winter.jpg">	
+		
+		<h2>Vienna Ball Season, Austria</h2>
+		<img src="photos/viennaballseason.jpg">
+		<p>In Vienna, over 400 balls are staged each winter, frequented by 300,000 dance-loving visitors from all around the world. A unique flair is invested in proceedings by the ceremonial program. The reason for the carnival-like addiction to balls amongst the Viennese can be found back in the 18th century, when the wearing of masks and costumes was reserved for the nobility, on private occasions. </p>
+		<ul>
+			<li><a href="http://www.austria.info/us/activities/culture-traditions/cherrished-traditions/ball-season-in-vienna">Vienna's Ball Season (December 31-February 13)</a></li>
+		</ul>
 
-	</title>
-</head>
-<body>
+		<h2>Chinese New Year</h2>
+		<img src="photos/chinanewyear.jpg">
+		<p>Spring Festival, widely known as Chinese New Year in the West, is the most important traditional festival, and most important celebration for families in China. It is an official public holiday, during which most Chinese have 7 days off work.</p>
+		<ul>
+			<li><a href="http://www.chinahighlights.com/travelguide/special-report/chinese-new-year/">Chinese New Year 2016 - a Monkey Year</a></li>
+		</ul>
+		
+		<h2>Carnavals arround the World</h2>	
+		<img src="photos/carnaval.jpg">
+		<p>Carnival season is fast approaching. With many celebrations across the world linked to the Christian festival of Easter, Ash Wednesday is the hook for a number of events as people party like crazy ahead of the period of Lent.
+		You will find the biggest number of celebrations taking place in parts of the world with an active Catholic church, and today the parties associated with Lent and Easter have grown into both huge tourist and local attractions. 
+		</p>
+		<ul>
+			<li><a href="http://www.travelsupermarket.com/blog/top-10-carnivals-around-world/">Carnavals arround the world</a></li>
+		</ul>
 
-	<h2><div id="spring">Spring</div></h2>
-				<div class="march">
+		<h2>Up Helly Aa Day in Schotland</h2>	
+		<img src="photos/uphellyaa.jpg">
+		<p>Welcome to the official website for Up Helly Aa, which takes place in Lerwick, Shetland, on the last Tuesday in January every year. Up Helly Aa day involves a series of marches and visitations, culminating in a torch-lit procession and the burning of a galley.</p>
+		<ul>
+			<li><a href="http://www.uphellyaa.org/">Up Helly Aa Day</a></li>
+		</ul>
 
+		<h2>Khajuraho Restival</h2>	
+		<img src="photos/khajuraho.jpg">
+		<p>Welcome to the official website for Up Helly Aa, which takes place in Lerwick, Shetland, on the last Tuesday in January every year. Up Helly Aa day involves a series of marches and visitations, culminating in a torch-lit procession and the burning of a galley.</p>
+		<ul>
+			<li><a href="http://khajurahodancefestival.com/">Khajuraho Festival in India (20-26 February)</a></li>
+		</ul>
 
-	<ul>
-		<li><a href="http://www.travelsupermarket.com/blog/top-10-carnivals-around-world/">Carnavals arround the world</a></li>
-	</ul>
 
 </body>
 </html>
