--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,65 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title> World Events </title>
-	</head>
-	
-	<body>	
-		<header>
-
-			<div id="logo">
-			<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title"></div>
-		</header>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+<title> World Events </title>
+</head>
+<body>	
+	<header>
+		<div id="logo">
+			<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title">
 		</div>
-			<h1>All that interests you arround the world </h1>
+	</header>
+	<section id="intro">
+		<div>
+			<h1>All that interests you around the world</h1>
 			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
-
-			<section id="winter"> 
+		</div>
+	</section>
+	<section id="winter">
+		<div>
 			<h2><a href="winter.html">Winter</a></h2>
-				<div id="december">
-					<img src="photos/december.jpg" alt="New Year" title="New Year Preparation"></div>
-				<div id="january">
-					<img src="photos/january.jpg" alt="Chinese New Year" title="Chinese New Year"></div>
-				<div id="february">
-					<img src="photos/february.jpg" alt="" title="New Year Preparation"></div>
-			</section>
-
-		
-			<section id="spring">
-			<h2><a href="spring.html">Spring</a></h2>			
-				<div id="march">
-					<img src="photos/march2.jpg" alt="Brazil Festival" title="Biggest Festifal in the world in Brasil"></div>
-				<div id="april">
-					<img src="photos/april2.jpg" alt="Easter" title="Easter bunny with eggs"></div>
-				<div id="may">
-					<img src="photos/may.jpg" alt="Victory day" title="Victory day on the 9th of May"></div>				
-			</section>
-
-			<section id="summer">
-			<h2><a href="summer.html">Summer</a></h2>
-				<div id="june">
-					<img src="photos/june2.jpg" alt="Chinese Dragon Boat Festival" title="Dragon boats all over the river"></div>
-				<div id="july">
-					<img src="photos/july.jpg" alt="Independence Day" title="4th of July"></div>
-				<div id="august">
-					<img src="photos/august.jpg" alt="Notting Hill Carnival" title="The Brinitch biggest Carnival"></div>	
-			</section>
-
-			<section id="fall">
-			<h2><a href="fall.html">Fall</a></h2>
-				<div id="september">
-					<img src="photos/september.jpg" alt="Sukkot" title="Traditional one week Jewish festival"></div>
-				<div id="october">
-					<img src="photos/october.jpg" alt="Octoberfest" title="Celebrating Octoberfest"></div>
-				<div id="november">
-					<img src="photos/november.jpg" alt="Thanksgiving" title="Thanksgiving table with turkey"></div>
-			</section>
-		<hr>
+			<a href="#">See more Winter photos</a>
+		</div>
+	</section>
+	<section id="spring">
+		<h2><a href="spring.html">Spring</a></h2>
+	</section>
+	<section id="summer">
+		<h2><a href="summer.html">Summer</a></h2>
+	</section>
+	<section id="fall">
+		<h2><a href="fall.html">Fall</a></h2>
+	</section>
+	<footer>
 		<ul>
 			<li><a href="https://www.facebook.com/alexandra.sokolova.52">About Me</a></li>
 			<li><a href="http://www.links.com">Other useful links</a></li>
 		</ul>
-
-	</body>
+	</footer>
+</body>
 </html>
