changes in project 1 and _unit 5

--- a/unit_1/fall.html
+++ b/unit_1/fall.html
@@ -1,19 +1,113 @@
 <!DOCTYPE html>
 <html>
-<head>
-		<link rel="stylesheet" type="text/css" href="css1/style1.css">
-	<title>Fall</title>
-</head>
-<body>
+	<head>
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>Fall</title>
+	</head>
+	<body id="fall-main">
 	
 	<h1>Fall</h1>	
-	<img src="photos/fall.jpg">	
-
-	<h2>Octoberfest in Munich and all over the world!</h2>
-		<img src="photos/chinanewyear.jpg">
-		<p>Spring Festival, widely known as Chinese New Year in the West, is the most important traditional festival, and most important celebration for families in China. It is an official public holiday, during which most Chinese have 7 days off work.</p>
-		<ul>
-			<li><a href="http://www.bavaria.us/oktoberfest-munich-germany-beer-festival">Octoberfest, get ready to celebrate!</a></li>
-		</ul>
+		</section>
+		<section>
+			<h2>Labor Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Labor Day - USA (September 7)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Bestival - Isle of Wight</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Bestival - Isle of Wight, UK (September 10-13)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Mexican Independence Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Mexican Independence Day (September 16)</a></li>
+		</section>
+		<section>
+			<h2>Oktoberfest</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Oktoberfest - Germany (September 19- October 4)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Columbus Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Columbus Day - USA (October 12)</a></li>
+		</section>
+		<section>
+			<h2>Halloween</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Halloween (October 31)</a></li>
+		</section>
+		<section>
+			<h2>Day of the Dead Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Day of the Dead Festival – Mexico (November 1-2)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Melbourne Cup Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Melbourne Cup Day (November 3)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Remembrance Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Remembrance Day – Australia (November 11)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Veterans Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Veterans Day – USA (November 11)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Festival of Lights</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Diwali (Festival of Lights) - India (November 11-15)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Thanksgiving Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> Thanksgiving Day - USA (November 26)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>F1 Grand Prix</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="..."> F1 Grand Prix - Abu Dhabi, UAE (November 29)</a></li>
+			</ul>
+		</section>
 </body>
 </html>
