--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -4,38 +4,51 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 <title> World Events </title>
 </head>
-<body>	
+<body>
+	<section id="main">	
 	<header>
 		<div id="logo">
-			<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title">
+			
 		</div>
 	</header>
 	<section id="intro">
+		<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title">
 		<div>
 			<h1>All that interests you around the world</h1>
-			<p> Share with us art exhibitions, sport events, places of interest, festivals and many more arround the world </p>
+			<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
 		</div>
 	</section>
 	<section id="winter">
 		<div>
 			<h2><a href="winter.html">Winter</a></h2>
-			<a href="#">See more Winter photos</a>
+			<p>For many people winter is most commonly assosiated with its biggest holiday - Christmas and New Year. However, we should not forget, that for different countries both date and significants of these holiday may vary. </p>
 		</div>
 	</section>
 	<section id="spring">
-		<h2><a href="spring.html">Spring</a></h2>
+		<div>
+			<h2><a href="spring.html">Spring</a></h2>
+			<p>Spring is the season of blossom. Colorful easter eggs in US, blossom of lilies of the valley, carnavals all over the world are the simbols of this season.
+			</p>
+		</div>
 	</section>
 	<section id="summer">
-		<h2><a href="summer.html">Summer</a></h2>
+		<div>
+			<h2><a href="summer.html">Summer</a></h2>
+			<p></p>
+		</div>
 	</section>
 	<section id="fall">
-		<h2><a href="fall.html">Fall</a></h2>
+		<div>
+			<h2><a href="fall.html">Fall</a></h2>
+			<p>Fall is the period of harvest! People gather crops, celebrate the returning to school, bake turkeys and prepare their pumpkins for the scariest holiday of the year!</p>
+		</div>
 	</section>
 	<footer>
 		<ul>
-			<li><a href="https://www.facebook.com/alexandra.sokolova.52">About Me</a></li>
 			<li><a href="http://www.links.com">Other useful links</a></li>
+			<li><a href="https://www.facebook.com/alexandra.sokolova.52">About Me</a></li>
 		</ul>
 	</footer>
+	</section> 
 </body>
 </html>
