--- a/unit_1/summer.html
+++ b/unit_1/summer.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-		<link rel="stylesheet" type="text/css" href="css1/style1.css">
-	<title>Summer</title>
-</head>
-<body>
-
+	<head>
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>Summer</title>
+	</head>
+	<body id="summer-main">
 	<h1>Summer</h1>	
-	<img src="photos/summer.jpg">	
+		<section>
+			<h2>CBanff World Television Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Banff World Television Festival - Canada (June 7-10)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Isle of Wight Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Isle of Wight Festival - UK (June 11-14)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Glastonbury Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Glastonbury Festival – UK (June 24-28)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Wimbledon</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Wimbledon - London, UK (June 29 - July 12)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Canada Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Canada Day (July 1)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Roskilde Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Roskilde Festival – Copenhagen, Denmark (July 1-4)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Independence Day</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Independence Day - USA (July 4)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Wireless Music Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Wireless Music Festival - England (July 3-5)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Calgary Stampede</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Calgary Stampede - Canada (July 3-12)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Montreux International Jazz Festival</h2>	
+			<img src="photos/.jpg">
+			<p>FIND</p>
+			<ul>
+				<li><a href="...">Montreux International Jazz Festival – Switzerland (July 3-18)</a></li>
+			</ul>
+		</section>
+
 
 	<h2>Chinese New Year</h2>
 		<img src="photos/chinanewyear.jpg">
