--- a/unit_1/spring.html
+++ b/unit_1/spring.html
@@ -1,43 +1,235 @@
 <!DOCTYPE html>
 <html>
-<head>
-		<link rel="stylesheet" type="text/css" href="css1/style1.css">
-	<title>Spring</title>
-</head>
-<body>
-
-	<section id="1">
-		<h1>Spring</h1>	
-		<img src="photos/spring.jpg">	
-	</section>
-
-		<h2>What's going on in April?</h2>
-		<img src="photos/amsterdam.jpg">
-		<p>You've heard April showers bring May flowers, but don’t let that halt your travel plans this month. Take a look at our list of not-to-miss events and destinations that are perfect for a fun spring getaway in April.</p>
-		<ul>
-			<li><a href="http://www.travelchannel.com/interests/travel-tips/articles/where-to-travel-in-april/">April arround the world</a></li>
-		</ul>
-
-
-		<h2>AfricaBurn</h2>
-			<img src="photos/africaburn.jpg">
-		<p>Since its founding in 2007 on a private farm called Stonehenge next to the Tankwa Karoo National Park far away from civilization (about 250 miles outside Cape Town) in the Northern Cape Province of South Africa. Like at Burning Man, you better be pretty intentional in your desire to make this trek. Given that the event is during the southern hemisphere’s early fall, there are so many similarities to Burning Man, you may feel like you’re hallucinating. In fact, the event is held over South Africa’s version of Labor Day, May Day. And, given the nature of the event, that may be true depending upon your predilections.</p>
-		<ul>
-			<li><a href="https://www.fest300.com/festivals/afrikaburn/">Africa Burn!</a></li>
-		</ul>
-
-		<h2>Omizutory</h2>
+	<head>
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>Spring</title>
+	</head>
+	<body id="spring-main">
+	<h1>Spring</h1>	
+		
+		<section>
+			<h2>Omizutory</h2>
 			<img src="photos/omizutori.jpg">
-		<p>Omizutori is the commonly used name for Shunie, a series of events held annually from March 1 to 14 at Todaiji Temple. This collection of Buddhist repentance rituals has been held every year for over 1250 years, making it one of the oldest reoccurring Buddhist events in Japan.</p>
-		<ul>
-			<li><a href="http://www.japan-guide.com/e/e4110.html">Omizutori in Japan (1-14 March)</a></li>
-		</ul>
-
-		<h2>National Cherry Blossom Festival</h2>
+			<p>Omizutori is the commonly used name for Shunie, a series of events held annually from March 1 to 14 at Todaiji Temple. This collection of Buddhist repentance rituals has been held every year for over 1250 years, making it one of the oldest reoccurring Buddhist events in Japan.</p>
+			<ul>
+				<li><a href="http://www.japan-guide.com/e/e4110.html">Omizutori in Japan (March 1-14)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Paris Fashion Week</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Paris Fashion Week (March 4-11)</a></li>
+				</ul>
+		</section>	
+		<section>
+			<h2>Holi Colour Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Holi Colour Festival – India (March 6)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>SXSW Music Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> SXSW Music Festival – Texas (March 9-12)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>F1 Grand Prix</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> F1 Grand Prix - Melbourne, Australia (March 15)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>St Patrick’s Day - Ireland</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> St Patrick’s Day - Ireland (March 17)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Winter Music Conference</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Winter Music Conference - Miami Beach USA (March 24-28)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Melbourne International Comedy Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Melbourne International Comedy Festival - Australia (March 25 - April 19)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>What's going on in April?</h2>
+			<img src="photos/amsterdam.jpg">
+			<p>You've heard April showers bring May flowers, but don’t let that halt your travel plans this month. Take a look at our list of not-to-miss events and destinations that are perfect for a fun spring getaway in April.</p>
+			<ul>
+				<li><a href="http://www.travelchannel.com/interests/travel-tips/articles/where-to-travel-in-april/">April arround the world</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>April Fool’s Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> April Fool’s Day (April 1)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Good Friday</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Good Friday (April 3)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Easter Sunday</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Easter Sunday (April 5)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Coachella Valley Music Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Coachella Valley Music Festival - USA (April 10-19)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>National Cherry Blossom Festival</h2>
 			<img src="photos/cherryblossom.jpg">
-		<p>A cherry blossom is the flower of any of several trees of genus Prunus, particularly the Japanese Cherry, Prunus serrulata, which is called Sakura after the Japanese.</p>
-		<ul>
-			<li><a href="http://www.nationalcherryblossomfestival.org/about/bloom-watch/">National Cherry Blossom Festival in Japan (11-14 April)</a></li>
-		</ul>
+			<p>A cherry blossom is the flower of any of several trees of genus Prunus, particularly the Japanese Cherry, Prunus serrulata, which is called Sakura after the Japanese.</p>
+			<ul>
+				<li><a href="http://www.nationalcherryblossomfestival.org/about/bloom-watch/">National Cherry Blossom Festival in Japan (April 11-14)</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Songkran</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Thai New Year (Songkran) – Thailand (April 13-15)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>ANZAC Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">ANZAC Day – Australia, New Zealand, Turkey (April 25)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>King's Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">King's Day - Amsterdam, The Netherlands (April 27)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>May Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">May Day – (westernised countries in the northern hemisphere) (May 1)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Bank Holiday</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Bank Holiday - UK (May 4)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Cinco de Mayo</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Cinco de Mayo - Mexico (May 5)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Prague Spring International Music Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Prague Spring International Music Festival - Czech Republic (May 9-31)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Cannes Film Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Cannes Film Festival - France (May 13-24)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Vivid Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Cinco de Mayo - Mexico (May 22 - June 8)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Bath International Music Festival</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Bath International Music Festival – England (May 23 - June 8)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Monaco F1 Grand Prix</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="..."> Monaco F1 Grand Prix – Monaco (May 24)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Roland Garros French Open</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Roland Garros French Open - Paris, France (May 24 - June 7)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>Memorial Day</h2>	
+				<img src="photos/.jpg">
+				<p>FIND</p>
+				<ul>
+					<li><a href="...">Memorial Day - USA (May 25)</a></li>
+				</ul>
+		</section>
+		<section>
+			<h2>AfricaBurn</h2>
+			<img src="photos/africaburn.jpg">
+			<p>Since its founding in 2007 on a private farm called Stonehenge next to the Tankwa Karoo National Park far away from civilization (about 250 miles outside Cape Town) in the Northern Cape Province of South Africa. Like at Burning Man, you better be pretty intentional in your desire to make this trek. Given that the event is during the southern hemisphere’s early fall, there are so many similarities to Burning Man, you may feel like you’re hallucinating. In fact, the event is held over South Africa’s version of Labor Day, May Day. And, given the nature of the event, that may be true depending upon your predilections.</p>
+			<ul>
+				<li><a href="https://www.fest300.com/festivals/afrikaburn/">Africa Burn!</a></li>
+			</ul>
+		</section>
 </body>
 </html>
