--- a/unit_6/resume.html
+++ b/unit_6/resume.html
@@ -36,7 +36,7 @@
 						<h3><strong>Quince Orchard HS Rockville, MD <small>(2009)</small><br><i><small>High School Diploma</small></i></strong></h3>
 						<p>*coursework in Child Development and Child Psychology;<br>
 							*interned at two Montgomery County public schools;<br>
-							*specialized knowledge in the 3rd grade curriculum.<br><br><br><br></p>
+							*specialized knowledge in the 3rd grade curriculum.</p>
 			</div>
 				<nav>
 					<a href="about_me.html">About Me</a> | <a href="resume.html">Resume</a>| <img id="logo" src ="pics/baby.png" alt="baby"> | <a href="contacts.html">Contacts</a> | <a href="hire_me.html">Hire Me</a>
