--- a/unit_1/fall.html
+++ b/unit_1/fall.html
@@ -11,9 +11,9 @@
 		<section>
 			<h2>Labor Day</h2>	
 				<img src="photos/.jpg">
-				<p>FIND</p>
+				<p>Labor Day is a holiday in the United States that is dedicated to workers across the country. The intention of the holiday is to recognize the contributions that laborers make to the United States as a whole. The public holiday always falls on the first Monday in September.</p>
 				<ul>
-					<li><a href="...">Labor Day - USA (September 7)</a></li>
+					<li><a href="http://publicholidays.us/labor-day/">Labor Day - USA (September 7)</a></li>
 				</ul>
 		</section>
 		<section>
