--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,54 +1,81 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-<title> World Events </title>
-</head>
-<body>
-	<section id="main">	
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title> World Events </title>
+	</head>
+	<body>
 	<header>
-		<div id="logo">
-			
-		</div>
+		<nav>		
+			<ul>
+				<li><img id="we" src="photos/we.png"></li>
+				<li>Share</li>
+				<li>Search</li>
+				<li>Sign in</li>
+				<li>Sign Up</li>
+			</ul>
+		</nav>
+
 	</header>
-	<section id="intro">
-		<img src="photos/logo.jpg" alt="Events arround the world" title="Building withWorld Events title">
-		<div>
-			<h1>All that interests you around the world</h1>
-			<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
-		</div>
+		<section id="intro">
+				<img id="logo" src="photos/logo.png" alt="Events arround the world"><h1>All that interests you around the world</h1>
+				<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
+		</section>
+		<section class="container">
+			<section id="column-left">
+				<h3>Share events with us and your friends</h3>
+				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed</p>
+				<div id="social-icons">
+					<a href="https://twitter.com/YOUR_USER_NAME"><img id="twitter" src="pics/twitter.png" alt="Twitter" /></a>
+					<a href="http://feeds.pinterest.com/YOUR_FEED_URL"><img id="pinterest" src="pics/pinterest.png" alt="Pinterest" /></a>
+					<a href="http://www.linkedin.com/in/YOUR_DISPLAY_NAME"><img id="linkedin" src="pics/linkedin.png" alt="LinkedIn" /></a>
+					<a href="http://www.facebook.com/YOUR_DISPLAY_NAME"><img id="fb" src="pics/fb.jpg" alt="Facebook" /></a><br>
+				</div>
+			</section>
+			<section id="column-center">
+				<h3>Follow us</h3>
+				<p>There is always room for more! Meet with like minded people and discuss events with your friends on our social media accounts.</p>
+			</section>
+			<section id="column left">
+				<h3>Keep track of your events!</h3>
+				<p>We've made a personal callendar for you. It's now easier to save and keep track of events that matters to you! Safe dates is your phones as well.</p>
+				<div id="contacts">
+					<p><img id="home" src="pics/home.png" alt="home"> 836 west side Dr, Gaithersburg, MD 20878<br>
+					<img id="phone" src="pics/phone.png" alt="phone"> Phone: 2409125428 <br>Cell: 2406714464 <br>
+					<img id="mail" src="pics/mail.png" alt="mail"> Ebonysanchez04@gmail.com
+					</p>
+				</div>
+			</section>
+		</section>
+	<section clas="clearfix">	
+		<section id="winter">
+			<div id="one">
+				<h2><a href="winter.html">Winter</a></h2>
+				<p>For many people winter is most commonly assosiated with its biggest holiday - Christmas and New Year. However, we should not forget, that for different countries both date and significants of these holiday may vary. </p>
+			</div>
+		</section>
+		<section id="spring">
+			<div id="two">
+				<h2><a href="spring.html">Spring</a></h2>
+				<p>Spring is the season of blossom. Colorful easter eggs in US, blossom of lilies of the valley, carnavals all over the world are the simbols of this season.
+				</p>
+			</div>
+		</section> 
+		<section id="summer">
+			<div id="three">
+				<h2><a href="summer.html">Summer</a></h2>
+				<p>Summer brings bright and sunny days, warm wind and lots of positive emotions. Lots of tourists spread accros the world hunting for sighseeing, carnivals, vine tastings and many other interesting things.</p>
+			</div>
+		</section>
+		<section id="fall">
+			<div id="four">
+				<h2><a href="fall.html">Fall</a></h2>
+				<p>Fall is the period of harvest! People gather crops, celebrate the returning to school, bake turkeys and prepare their pumpkins for the scariest holiday of the year!</p>
+			</div>
+		</section>
+	</section>	
+	<section id="footer">
+		&copy; 2015 World Events by Alexandra
 	</section>
-	<section id="winter">
-		<div>
-			<h2><a href="winter.html">Winter</a></h2>
-			<p>For many people winter is most commonly assosiated with its biggest holiday - Christmas and New Year. However, we should not forget, that for different countries both date and significants of these holiday may vary. </p>
-		</div>
-	</section>
-	<section id="spring">
-		<div>
-			<h2><a href="spring.html">Spring</a></h2>
-			<p>Spring is the season of blossom. Colorful easter eggs in US, blossom of lilies of the valley, carnavals all over the world are the simbols of this season.
-			</p>
-		</div>
-	</section>
-	<section id="summer">
-		<div>
-			<h2><a href="summer.html">Summer</a></h2>
-			<p></p>
-		</div>
-	</section>
-	<section id="fall">
-		<div>
-			<h2><a href="fall.html">Fall</a></h2>
-			<p>Fall is the period of harvest! People gather crops, celebrate the returning to school, bake turkeys and prepare their pumpkins for the scariest holiday of the year!</p>
-		</div>
-	</section>
-	<footer>
-		<ul>
-			<li><a href="http://www.links.com">Other useful links</a></li>
-			<li><a href="https://www.facebook.com/alexandra.sokolova.52">About Me</a></li>
-		</ul>
-	</footer>
-	</section> 
 </body>
 </html>
