--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -15,36 +15,36 @@
 				<li>Sign Up</li>
 			</ul>
 		</nav>
-
 	</header>
 		<section id="intro">
 				<img id="logo" src="photos/logo.png" alt="Events arround the world"><h1>All that interests you around the world</h1>
 				<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
 		</section>
-		<section class="container">
-			<section id="column-left">
-				<h3>Share events with us and your friends</h3>
-				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed</p>
-				<div id="social-icons">
-					<a href="https://twitter.com/YOUR_USER_NAME"><img id="twitter" src="pics/twitter.png" alt="Twitter" /></a>
-					<a href="http://feeds.pinterest.com/YOUR_FEED_URL"><img id="pinterest" src="pics/pinterest.png" alt="Pinterest" /></a>
-					<a href="http://www.linkedin.com/in/YOUR_DISPLAY_NAME"><img id="linkedin" src="pics/linkedin.png" alt="LinkedIn" /></a>
-					<a href="http://www.facebook.com/YOUR_DISPLAY_NAME"><img id="fb" src="pics/fb.jpg" alt="Facebook" /></a><br>
-				</div>
-			</section>
-			<section id="column-center">
+		<section id="container" class="clearfix">
+			<section class="column">
 				<h3>Follow us</h3>
 				<p>There is always room for more! Meet with like minded people and discuss events with your friends on our social media accounts.</p>
+					<h4>follow us</h4>
+					<a href="https://twitter.com/"><img id="twitter" src="photos/twitter.png" alt="Twitter Icon" /></a>
+					<a href="http://feeds.pinterest.com/"><img id="pinterest" src="photos/pinterest.png" alt="Pinterest Icon"/></a>
+					<a href="http://www.facebook.com/"><img id="fb" src="photos/facebook.png" alt="Facebook Icon"/></a>
+					<a href="https://instagram.com/"><img id="instagram"src="photos/instagram.png" alt="Instagram Icon"/></a>
+				</p>
 			</section>
-			<section id="column left">
+			<section class="column-center">
+				<h3>Share events with all of us</h3>
+				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed and we will post it immediately!
+				<h4>share with us</h4>
+				<a href="http:www.asokolova89@gmail.com/"><img id="share" src="photos/share.png" alt="Share Icon"/></a>
+			</section>
+			<section class="column">
 				<h3>Keep track of your events!</h3>
-				<p>We've made a personal callendar for you. It's now easier to save and keep track of events that matters to you! Safe dates is your phones as well.</p>
-				<div id="contacts">
-					<p><img id="home" src="pics/home.png" alt="home"> 836 west side Dr, Gaithersburg, MD 20878<br>
-					<img id="phone" src="pics/phone.png" alt="phone"> Phone: 2409125428 <br>Cell: 2406714464 <br>
-					<img id="mail" src="pics/mail.png" alt="mail"> Ebonysanchez04@gmail.com
-					</p>
-				</div>
+				<p>We've made a personal callendar for you. It's now easier to save and keep track of events that matters to you! Safe dates is your phones as well.
+				<h4>save us</h4>
+					<img id="apple" src="photos/apple.png" alt="Apple Icon">
+					<img id="android" src="photos/android.png" alt="Android Icon">
+					<img id="windows" src="photos/windows.png" alt="Windows Icon">
+				</p>
 			</section>
 		</section>
 	<section clas="clearfix">	
@@ -74,8 +74,8 @@
 			</div>
 		</section>
 	</section>	
-	<section id="footer">
+	<footer>
 		&copy; 2015 World Events by Alexandra
-	</section>
+	</footer>
 </body>
 </html>
